prod_snapshot_2015-09-24_1030/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DC_Advertiser_Perc_Text__c</fullName>
        <formula>CASE( DC_Advertiser_Perc__c ,
1/100,&quot;one&quot;,
2/100,&quot;two&quot;,
3/100,&quot;three&quot;,
4/100,&quot;four&quot;,
5/100,&quot;five&quot;,
6/100,&quot;six&quot;,
7/100,&quot;seven&quot;,
8/100,&quot;eight&quot;,
9/100,&quot;nine&quot;,
10/100,&quot;ten&quot;,
11/100,&quot;eleven&quot;,
12/100,&quot;twelve&quot;,
13/100,&quot;thirteen&quot;,
14/100,&quot;fourteen&quot;,
15/100,&quot;fifteen&quot;,
16/100,&quot;sixteen&quot;,
17/100,&quot;seventeen&quot;,
18/100,&quot;eighteen&quot;,
19/100,&quot;nineteen&quot;,
20/100,&quot;twenty&quot;,
21/100,&quot;twenty one&quot;,
22/100,&quot;twenty two&quot;,
23/100,&quot;twenty three&quot;,
24/100,&quot;twenty four&quot;,
25/100,&quot;twenty five&quot;,
26/100,&quot;twenty six&quot;,
27/100,&quot;twenty seven&quot;,
28/100,&quot;twenty eight&quot;,
29/100,&quot;twenty nine&quot;,
30/100,&quot;thirty&quot;,
31/100,&quot;thirty one&quot;,
32/100,&quot;thirty two&quot;,
33/100,&quot;thirty three&quot;,
34/100,&quot;thirty four&quot;,
35/100,&quot;thirty five&quot;,
36/100,&quot;thirty six&quot;,
37,&quot;thirty seven&quot;,
38,&quot;thirty eight&quot;,
39,&quot;thirty nine&quot;,
40/100,&quot;forty&quot;,
41/100,&quot;forty one&quot;,
42/100,&quot;forty two&quot;,
43/100,&quot;forty three&quot;,
44/100,&quot;forty four&quot;,
45/100,&quot;forty five&quot;,
46/100,&quot;forty six&quot;,
47/100,&quot;forty seven&quot;,
48/100,&quot;forty eight&quot;,
49/100,&quot;forty nine&quot;,
50/100,&quot;fifty&quot;,
51/100,&quot;fifty one&quot;,
52/100,&quot;fifty two&quot;,
53/100,&quot;fifty three&quot;,
54/100,&quot;fifty four&quot;,
55/100,&quot;fifty five&quot;,
56/100,&quot;fifty six&quot;,
57/100,&quot;fifty seven&quot;,
58/100,&quot;fifty eight&quot;,
59/100,&quot;fifty nine&quot;,
60/100,&quot;sixty&quot;,
61/100,&quot;sixty one&quot;,
62/100,&quot;sixty two&quot;,
63/100,&quot;sixty three&quot;,
64/100,&quot;sixty four&quot;,
65/100,&quot;sixty five&quot;,
66/100,&quot;sixty six&quot;,
67/100,&quot;sixty seven&quot;,
68/100,&quot;sixty eight&quot;,
69/100,&quot;sixty nine&quot;,
70/100,&quot;seventy&quot;,
71/100,&quot;seventy one&quot;,
72/100,&quot;seventy two&quot;,
73/100,&quot;seventy three&quot;,
74/100,&quot;seventy four&quot;,
75/100,&quot;seventy five&quot;,
76/100,&quot;seventy six&quot;,
77/100,&quot;seventy seven&quot;,
78/100,&quot;seventy eight&quot;,
79/100,&quot;seventy nine&quot;,
80/100,&quot;eighty&quot;,
81/100,&quot;eighty one&quot;,
82/100,&quot;eighty two&quot;,
83/100,&quot;eighty three&quot;,
84/100,&quot;eighty four&quot;,
85/100,&quot;eighty five&quot;,
86/100,&quot;eighty six&quot;,
87/100,&quot;eighty seven&quot;,
88/100,&quot;eighty eight&quot;,
89/100,&quot;eighty nine&quot;,
90/100,&quot;ninety&quot;,
91/100,&quot;ninety one&quot;,
92/100,&quot;ninety two&quot;,
93/100,&quot;ninety three&quot;,
94/100,&quot;ninety four&quot;,
95/100,&quot;ninety five&quot;,
96/100,&quot;ninety six&quot;,
97/100,&quot;ninety seven&quot;,
98/100,&quot;ninety eight&quot;,
99/100,&quot;ninety nine&quot;,
100/100,&quot;one hundred&quot;,&quot;No Text&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Advertiser Perc Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Advertiser_Perc__c</fullName>
        <formula>1 - DC_Split_Perc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Advertiser Perc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DC_Date_Submitted__c</fullName>
        <label>DC Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DC_Deal_Run_Length__c</fullName>
        <defaultValue>&quot;6 Months&quot;</defaultValue>
        <label>DC Deal Run Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Deals_Sold_Yesterday__c</fullName>
        <label>DC Deals Sold Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Description__c</fullName>
        <label>DC Description**</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_End_Date__c</fullName>
        <inlineHelpText>Date when the deal is ending</inlineHelpText>
        <label>DC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Escalate_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is an escalation</inlineHelpText>
        <label>DC Escalate Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Exp_Net_Rev__c</fullName>
        <inlineHelpText>Dollar Amount That This Deal Is Predicted To Net</inlineHelpText>
        <label>DC Exp Net Rev**</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Expiration__c</fullName>
        <label>DC Expiration**</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Flat_Rate__c</fullName>
        <label>DC Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Gross_Revenue_Yesterday__c</fullName>
        <label>DC Gross Revenue Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Gross_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC Gross Revenue</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Id_Number__c</fullName>
        <inlineHelpText>To Be Filled Out By Area Manager After Entered Into DealChicken Production System</inlineHelpText>
        <label>DC Id Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Instr_Limits__c</fullName>
        <label>DC Instr/Limits</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_KPI_Run_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DC KPI Run Date</label>
        <referenceTo>KPICalender__c</referenceTo>
        <relationshipLabel>Opportunities (DC KPI Run Date)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Main_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC Main Feature?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Max_Deals__c</fullName>
        <description>Maximum Number Of Deals As Gifts A Customer Can Purchase.</description>
        <inlineHelpText>Maximum Number Of Deals A Person Can Purchase For Themselves.</inlineHelpText>
        <label>DC Max Deals**</label>
        <picklist>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC_Max_Gifts__c</fullName>
        <inlineHelpText>Maximum Number Of Deals As Gifts A Customer Can Purchase.</inlineHelpText>
        <label>DC Max Gifts**</label>
        <picklist>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC_Message__c</fullName>
        <formula>IF(((ISNULL(DC_Run_Date__c))&amp;&amp; (ISPICKVAL(StageName,&quot;DC Submitted&quot;))),&quot;NOTE:  Run date should be entered before approval.&quot;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Net_Revenue2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DC Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Net_Revenue_Split__c</fullName>
        <formula>DC_Gross_Revenue__c *  DC_Split_Perc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Net Revenue(Split)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Net_Revenue_Yesterday__c</fullName>
        <label>DC Net Revenue Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Owner_Perc__c</fullName>
        <defaultValue>7/100</defaultValue>
        <label>DC Owner Perc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DC_Owner__c</fullName>
        <formula>Sales_Rep_II__r.FirstName  &amp; &quot; &quot; &amp;  Sales_Rep_II__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Parent_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Opp related here has a signed contract that includes this deal.</inlineHelpText>
        <label>DC Contract On Parent Opp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DC Child Opps</relationshipLabel>
        <relationshipName>DC_Child_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Pro__c</fullName>
        <formula>DealChicken_Market__r.DealChicken_PRO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Pro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Proof_Hyperlink__c</fullName>
        <inlineHelpText>Insert the link that will be sent to the merchant to review their deal before they approve it</inlineHelpText>
        <label>DC Proof Hyperlink</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DC_Red_Loc__c</fullName>
        <inlineHelpText>Redemption Location</inlineHelpText>
        <label>DC Red Loc**</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_Run_Date__c</fullName>
        <inlineHelpText>Date The Deal Is Running In The Media.</inlineHelpText>
        <label>DC Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Sell_Price__c</fullName>
        <label>DC Sell Price**</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Share_Perc__c</fullName>
        <formula>IF( DC_Run_Date__c &gt;= DATE(2012,1,1), (7/100) - DC_Owner_Perc__c,IF( CloseDate &gt;= DATE(2012,1,1),(7/100) - DC_Owner_Perc__c,(6/100) - DC_Owner_Perc__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Share Perc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DC_Share__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DC Share</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Sharer__c</fullName>
        <label>DC Sharer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Split_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is This a Split/Shared Opportunity</inlineHelpText>
        <label>DC Split Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Split_Perc__c</fullName>
        <inlineHelpText>Gannett Portion of Split</inlineHelpText>
        <label>DC Split Perc**</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DC_Total_Value__c</fullName>
        <label>DC Total Value**</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Sheet_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Sheet Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Closed_Approved_Signed__c</fullName>
        <label>Date Closed Approved Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Deal_Pulled__c</fullName>
        <label>Date Deal Pulled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proof_Approved__c</fullName>
        <label>Date Proof Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proof_Out__c</fullName>
        <label>Date Proof Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ready_For_Internal_proofing__c</fullName>
        <label>Date Ready for Internal Proofing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rejected__c</fullName>
        <label>Date Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Revised__c</fullName>
        <label>Date Revised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shell_Created__c</fullName>
        <label>Date Shell Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of Account Standing Change</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Running__c</fullName>
        <formula>Today() -  DC_Run_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Start__c</fullName>
        <description>Today - The opportunity start date</description>
        <formula>TODAY() -  Earliest_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Submittal_to_Approval__c</fullName>
        <formula>(Date_Closed_Approved_Signed__c - Date_Submitted__c) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours from Submittal to Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_End_Date__c</fullName>
        <formula>Today() - DC_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealChicken_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To find, type the state Abbrev within star characters (*AZ*) and hit the lookup button.</inlineHelpText>
        <label>DealChicken Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>DealChicken</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealId__c</fullName>
        <displayFormat>DCID-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>DC DealId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deal_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Calendar</label>
        <referenceTo>Deal_Calendar__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <inlineHelpText>Put Addl notes in here.  These will be sent along with the request to the approver.</inlineHelpText>
        <label>Other Notes/Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Duration__c</fullName>
        <inlineHelpText>Should the Advertiser&apos;s deal be promoted for the entire Deal Duration?</inlineHelpText>
        <label>Promote For Duration?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Preview_Link__c</fullName>
        <label>Deal Preview Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deals_Sold__c</fullName>
        <label>Deals Sold</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Ran_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Ran By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitieszxDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Ran_DateTime__c</fullName>
        <label>Demo Ran DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Ran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Ran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Set_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Set By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitieszxDb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Set_DateTime__c</fullName>
        <label>Demo Set DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detailed_Lead_Source_1st__c</fullName>
        <label>Detailed Lead Source 1st</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Lead_Source__c</fullName>
        <label>Detailed Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>East Valley Tribune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellowpages.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR Lapsed_02/02/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa Chamber_1/5/2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Business Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange Soda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington_06132010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuyerZone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentist DM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DigAM_Assigned_Timer__c</fullName>
        <description>This should be good for the Friday Portion (1/7/2000) but needs to have the other days brought into sync with it.</description>
        <formula>IF(NOT(ISNULL(  DAMAssigned__c )),

IF( 
MOD(DATEVALUE(Closed_Won_Time_Stamp__c ) - DATE(2000,1,4),7)=0, 
IF(DAMAssigned__c - Closed_Won_Time_Stamp__c &lt;= 3,
0,
(DAMAssigned__c - Closed_Won_Time_Stamp__c ) - ((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7) * 2), 


IF(
MOD(DATEVALUE(Closed_Won_Time_Stamp__c ) - DATE(2000,1,5),7)=0, 
IF(DAMAssigned__c - Closed_Won_Time_Stamp__c &lt;= 2,
DAMAssigned__c - Closed_Won_Time_Stamp__c,
(DAMAssigned__c - Closed_Won_Time_Stamp__c ) - ((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7) * 2), 


IF(
MOD(DATEVALUE(Closed_Won_Time_Stamp__c ) - DATE(2000,1,6),7)=0, 
IF(DAMAssigned__c - Closed_Won_Time_Stamp__c &lt;= 1,
DAMAssigned__c - Closed_Won_Time_Stamp__c,
(DAMAssigned__c - Closed_Won_Time_Stamp__c  ) - ((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7) * 2), 


IF(
MOD(DATEVALUE(Closed_Won_Time_Stamp__c ) - DATE(2000,1,7),7)=0, 
IF((DAMAssigned__c - Closed_Won_Time_Stamp__c) &lt; 3,
0,
(DAMAssigned__c - Closed_Won_Time_Stamp__c ) - (((FLOOR((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7)) * 2) + 2)), 


IF(
MOD(DATEVALUE(Closed_Won_Time_Stamp__c ) - DATE(2000,1,8),7)=0, 
IF(DAMAssigned__c - Closed_Won_Time_Stamp__c &lt; 3,
DAMAssigned__c - Closed_Won_Time_Stamp__c,
(DAMAssigned__c - Closed_Won_Time_Stamp__c) - ((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7) * 2), 


IF(
MOD(DATEVALUE(Closed_Won_Time_Stamp__c ) - DATE(2000,1,9),7)=0, 
IF(DAMAssigned__c - Closed_Won_Time_Stamp__c &lt; 2,
0,
(DAMAssigned__c - Closed_Won_Time_Stamp__c) - ((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7) * 2), 


IF((DAMAssigned__c - Closed_Won_Time_Stamp__c) &lt; 5,
DAMAssigned__c - Closed_Won_Time_Stamp__c,
(DAMAssigned__c - Closed_Won_Time_Stamp__c ) - ((DAMAssigned__c - Closed_Won_Time_Stamp__c )/7) * 2)

) 
) 
) 
) 
) 
)

,NOW() -   Closed_Won_Time_Stamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DigAM Assigned Timer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dig_AM_Email__c</fullName>
        <formula>Dig_Account_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dig AM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dig_AM_Name__c</fullName>
        <formula>Dig_Account_Manager__r.FirstName &amp; &quot; &quot; &amp; Dig_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dig AM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dig_Account_Manager_Id__c</fullName>
        <formula>Account.Account_Manager__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dig - Account Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dig_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dig - Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dig_Cancel_Progress_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dig - Cancel Progress Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dig_OnB_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dig - OnB Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dig_On_B_Call_Date__c</fullName>
        <label>Dig - On B Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dig_On_B_Timer__c</fullName>
        <formula>IF( Dig_OnB_Call__c = True,Dig_On_B_Call_Date__c -  Closed_Won_Time_Stamp__c,Now() - Closed_Won_Time_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dig - On B Timer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dig_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dig - Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1jMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dig_Status_Notes__c</fullName>
        <label>Dig - Status Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Audit_URL__c</fullName>
        <description>An audit URL field on the opportunity, so that Jumpstart specialists can add the audit into that field</description>
        <label>Digital Audit URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Digital_Products_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Products Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Additional Run Dates Set!</inlineHelpText>
        <label>Distribution Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Redistribute__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do Not Redistribute - Prevents This Opp From Being Transferred To The Open Acq Queue Owner.</inlineHelpText>
        <label>DNR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downgrade_Reason__c</fullName>
        <label>Downgrade Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <label>Draft</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EM_DM__c</fullName>
        <label>EM/DM</label>
        <picklist>
            <picklistValues>
                <fullName>DM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earliest_Print_Date__c</fullName>
        <description>Day of creation + 7</description>
        <formula>CreatedDate + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <summarizedField>OpportunityLineItem.ServiceDate</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Re-feature</inlineHelpText>
        <label>Email Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Rank__c</fullName>
        <label>Email Rank</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhanced_Branding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhanced Branding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evergreen_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notates that the Attached Signed Contract is an Evergreen Contract</description>
        <label>Evergreen Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expanded_Photo_Gallery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expanded Photo Gallery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Opp Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>